--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 				</p>
 				<button>
 					<a href="#">Apply Online</a>
-					<img src="img/icon/arrow.svg" alt="" width="18,28px" height="16,45px">
+					<img src="img/icon/arrow.svg" alt="" width="18px" height="16px">
 				</button>
 				<div>
-					<img src="img/icon/facebook.svg" alt="" width="11,19px" height="20,45px">
-					<img src="img/icon/twitter.svg" alt="" width="20,67px" height="17,66px">
-					<img src="img/icon/instagram.svg" alt="" width="21,31px" height="22,43px">
+					<img src="img/icon/facebook.svg" alt="" width="11px" height="20px">
+					<img src="img/icon/twitter.svg" alt="" width="21px" height="18px">
+					<img src="img/icon/instagram.svg" alt="" width="21px" height="22px">
 				</div>
 			</div>
 			<div>
@@ -67,10 +67,10 @@
 				<p>Featured Universities</p>
 			</div>
 			<div>
-				<img src="img/featured_1.png" alt="" width="225px" height="67,61px">
-				<img src="img/featured_2.png" alt="" width="250px" height="63,95px">
-				<img src="img/featured_3.png" alt="" width="224px" height="79,21px">
-				<img src="img/featured_4.png" alt="" width="275px" height="62,24px">
+				<img src="img/featured_1.png" alt="" width="225px" height="68px">
+				<img src="img/featured_2.png" alt="" width="250px" height="64px">
+				<img src="img/featured_3.png" alt="" width="224px" height="79px">
+				<img src="img/featured_4.png" alt="" width="275px" height="62px">
 			</div>
 		</section>
 
@@ -95,7 +95,7 @@
 						</p>
 						<button>
 							<a href="#">Learn more</a>
-							<img src="img/icon/arrow.svg" alt="" width="" height="">
+							<img src="img/icon/arrow.svg" alt="" width="24px" height="24px">
 						</button>
 					</div>
 				</article>
@@ -174,7 +174,7 @@
 						<img src="img/card_news_1.png" alt="" width="344px" height="224px">
 					</div>
 					<div>
-						<img src="img/icon/calendar.svg" alt="" width="14,44px" height="14,44px">
+						<img src="img/icon/calendar.svg" alt="" width="14px" height="14px">
 						<span>17 Apr 2020</span>
 					</div>
 					<div>
@@ -186,7 +186,7 @@
 						<img src="img/card_news_2.png" width="344px" height="224px">
 					</div>
 					<div>
-						<img src="img/icon/calendar.svg" alt="" width="14,44px" height="14,44px">
+						<img src="img/icon/calendar.svg" alt="" width="14px" height="14px">
 						<span>17 Apr 2020</span>
 					</div>
 					<div>
@@ -198,7 +198,7 @@
 						<img src="img/card_news_3.png" width="344px" height="224px">
 					</div>
 					<div>
-						<img src="img/icon/calendar.svg" alt="" width="14,44px" height="14,44px">
+						<img src="img/icon/calendar.svg" alt="" width="14px" height="14px">
 						<span>17 Apr 2020</span>
 					</div>
 					<div>
@@ -209,7 +209,7 @@
 			<div>
 				<button>
 					<a href="#">Join Here</a>
-					<img src="img/icon/arrow.svg" alt="" width="18,28px" height="16,45px">
+					<img src="img/icon/arrow.svg" alt="" width="18px" height="16px">
 				</button>
 			</div>
 		</section>
@@ -250,10 +250,10 @@
 					<div>
 						<button>
 							<a href="#">Learn More</a>
-							<img src="img/icon/arrow.svg" alt="" width="15,58px" height="15,18px">
+							<img src="img/icon/arrow.svg" alt="" width="16px" height="15px">
 						</button>
 						<div>
-							<img src="img/time.svg" alt="" width="16,67px" height="16,67px">
+							<img src="img/time.svg" alt="" width="17px" height="17">
 							<span>10:00 AM - 2:00 PM</span>
 						</div>
 					</div>
@@ -283,10 +283,10 @@
 					<div>
 						<button>
 							<a href="#">Learn More</a>
-							<img src="img/icon/arrow.svg" alt="" width="15,58px" height="15,18px">
+							<img src="img/icon/arrow.svg" alt="" width="16px" height="15px">
 						</button>
 						<div>
-							<img src="img/time.svg" alt="" width="16,67px" height="16,67px">
+							<img src="img/time.svg" alt="" width="17px" height="17px">
 							<span>10:00 AM - 2:00 PM</span>
 						</div>
 					</div>
@@ -423,7 +423,7 @@
 			</div>
 			<button>
 				<span>Apply Online</span>
-				<img src="img/icon/arrow.svg" alt="" width="18,28px" height="16,45px">
+				<img src="img/icon/arrow.svg" alt="" width="18px" height="16px">
 			</button>
 		</section>
 	</main>
@@ -464,8 +464,8 @@
 			</ul>
 		</div>
 		<div>
-			<img src="img/icon/facebook_white.svg" alt="" width="8,8px" height="16px">
-			<img src="img/icon/twitter_white.svg" alt="" width="16px" height="13,67px">
+			<img src="img/icon/facebook_white.svg" alt="" width="9px" height="16px">
+			<img src="img/icon/twitter_white.svg" alt="" width="16px" height="14px">
 			<img src="img/icon/instagram_white.svg" alt="" width="16px" height="16px">
 		</div>
 	</footer>
