--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=, initial-scale=1.0">
 	<title>Executive study abroad</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<style>@import url(fonts/Abel-Regular.ttf);</style>
 </head>
 <body>
 
@@ -13,7 +12,7 @@
 
 	<header>
 		<div>
-			<img src="img/logo.png" alt="logo" width="146px" height="52px">
+			<img src="img/logo.png" alt="logo" width="146" height="52">
 		</div>
 		<nav>
 			<ul>
@@ -24,7 +23,7 @@
 				<li>Country</li>
 			</ul>
 			<button>
-				<a href="#">Apply</a>
+				Apply
 			</button>
 		</nav>
 	</header>
@@ -45,18 +44,18 @@
 					opportunity to work with you "today" for "tomorrow's" better career
 				</p>
 				<button>
-					<a href="#">Apply Online</a>
-					<img src="img/icon/arrow.svg" alt="" width="18px" height="16px">
+					<span>Apply Online</span>
+					<img src="img/icon/arrow.svg" alt="arrow" width="18" height="16">
 				</button>
 				<div>
-					<img src="img/icon/facebook.svg" alt="" width="11px" height="20px">
-					<img src="img/icon/twitter.svg" alt="" width="21px" height="18px">
-					<img src="img/icon/instagram.svg" alt="" width="21px" height="22px">
+					<img src="img/icon/facebook.svg" alt="facebook" width="11" height="20">
+					<img src="img/icon/twitter.svg" alt="twitter" width="21" height="18">
+					<img src="img/icon/instagram.svg" alt="instagram" width="21" height="22">
 				</div>
 			</div>
 			<div>
-				<img src="img/banner.png" alt="" width="470px" height="565px">
-				<img src="img/oval.png" alt="" width="1030px" height="581px">
+				<img src="img/banner.png" alt="banner" width="470" height="565">
+				<img src="img/oval.png" alt=" oval" width="1030" height="581">
 			</div>
 		</section>
 
@@ -67,10 +66,10 @@
 				<p>Featured Universities</p>
 			</div>
 			<div>
-				<img src="img/featured_1.png" alt="" width="225px" height="68px">
-				<img src="img/featured_2.png" alt="" width="250px" height="64px">
-				<img src="img/featured_3.png" alt="" width="224px" height="79px">
-				<img src="img/featured_4.png" alt="" width="275px" height="62px">
+				<img src="img/featured_1.png" alt="featured" width="225" height="68">
+				<img src="img/featured_2.png" alt="featured" width="250" height="64">
+				<img src="img/featured_3.png" alt="featured" width="224" height="79">
+				<img src="img/featured_4.png" alt="featured" width="275" height="62">
 			</div>
 		</section>
 
@@ -87,72 +86,72 @@
 			<div>
 				<article>
 					<div>
-						<img src="img/icon/services_1.svg" alt="" width="76px" height="76px">
+						<img src="img/icon/services_1.svg" alt="icon" width="76" height="76">
 						<h3>Career Counselling</h3>
 						<p>Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut.
 							Blanditiis quos in minus. Voluptatum quia quia voluptas voluptatem vero
 							ex possimus. Iure et consectetur dolorem dicta accusantium fugiat.
 						</p>
-						<button>
+						<div>
 							<a href="#">Learn more</a>
-							<img src="img/icon/arrow.svg" alt="" width="24px" height="24px">
-						</button>
+							<img src="img/icon/arrow.svg" alt="arrow" width="24" height="24">
+						</div>
 					</div>
 				</article>
 				<article>
 					<div>
-						<img src="img/icon/services_2.svg" alt="" width="76px" height="76px">
+						<img src="img/icon/services_2.svg" alt="icon" width="76" height="76">
 						<h3>University Admissions</h3>
 						<p>Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis
 							quos in minus. Voluptatum quia quia voluptas voluptatem vero ex possimus.
 							Iure et consectetur dolorem dicta accusantium fugiat.
 						</p>
-						<button>
+						<div>
 							<a href="#">Learn more</a>
-							<img src="img/icon/arrow.svg" alt="" width="24px" height="24px">
-						</button>
+							<img src="img/icon/arrow.svg" alt="arrow" width="24" height="24">
+						</div>
 					</div>
 				</article>
 				<article>
 					<div>
-						<img src="img/icon/services_3.svg" alt="" width="76px" height="76px">
+						<img src="img/icon/services_3.svg" alt="icon" width="76" height="76">
 						<h3>Visa Consultancy</h3>
 						<p>Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut.
 							Blanditiis quos in minus. Voluptatum quia quia voluptas voluptatem vero
 							ex possimus. Iure et consectetur dolorem dicta accusantium fugiat.
 						</p>
-						<button>
+						<div>
 							<a href="#">Learn more</a>
-							<img src="img/icon/arrow.svg" alt="" width="24px" height="24px">
-						</button>
+							<img src="img/icon/arrow.svg" alt="arrow" width="24" height="24">
+						</div>
 					</div>
 				</article>
 				<article>
 					<div>
-						<img src="img/icon/services_4.svg" alt="" width="76px" height="76px">
+						<img src="img/icon/services_4.svg" alt="icon" width="76" height="76">
 						<h3>Accommodation</h3>
 						<p>Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut.
 							Blanditiis quos in minus. Voluptatum quia quia voluptas voluptatem vero ex possimus.
 							Iure et consectetur dolorem dicta accusantium fugiat.
 						</p>
-						<button>
+						<div>
 							<a href="#">Learn more</a>
-							<img src="img/icon/arrow.svg" alt="" width="24px" height="24px">
-						</button>
+							<img src="img/icon/arrow.svg" alt="arrow" width="24" height="24">
+						</div>
 					</div>
 				</article>
 				<article>
 					<div>
-						<img src="img/icon/services_5.svg" alt="" width="76px" height="76px">
+						<img src="img/icon/services_5.svg" alt="icon" width="76" height="76">
 						<h3>Pre-Departure Briefing</h3>
 						<p>Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut.
 							Blanditiis quos in minus. Voluptatum quia quia voluptas voluptatem vero
 							ex possimus. Iure et consectetur dolorem dicta accusantium fugiat.
 						</p>
-						<button>
+						<div>
 							<a href="#">Learn more</a>
-							<img src="img/icon/arrow.svg" alt="" width="24px" height="24px">
-						</button>
+							<img src="img/icon/arrow.svg" alt="arrow" width="24" height="24">
+						</div>
 					</div>
 				</article>
 			</div>
@@ -171,10 +170,10 @@
 			<div>
 				<article>
 					<div>
-						<img src="img/card_news_1.png" alt="" width="344px" height="224px">
+						<img src="img/card_news_1.png" alt="card" width="344" height="224">
 					</div>
 					<div>
-						<img src="img/icon/calendar.svg" alt="" width="14px" height="14px">
+						<img src="img/icon/calendar.svg" alt="calendar" width="14" height="14">
 						<span>17 Apr 2020</span>
 					</div>
 					<div>
@@ -183,10 +182,10 @@
 				</article>
 				<article>
 					<div>
-						<img src="img/card_news_2.png" width="344px" height="224px">
+						<img src="img/card_news_2.png" alt="card" width="344" height="224">
 					</div>
 					<div>
-						<img src="img/icon/calendar.svg" alt="" width="14px" height="14px">
+						<img src="img/icon/calendar.svg" alt="calendar" width="14" height="14">
 						<span>17 Apr 2020</span>
 					</div>
 					<div>
@@ -195,10 +194,10 @@
 				</article>
 				<article>
 					<div>
-						<img src="img/card_news_3.png" width="344px" height="224px">
+						<img src="img/card_news_3.png" alt="card" width="344" height="224">
 					</div>
 					<div>
-						<img src="img/icon/calendar.svg" alt="" width="14px" height="14px">
+						<img src="img/icon/calendar.svg" alt="calendar" width="14" height="14">
 						<span>17 Apr 2020</span>
 					</div>
 					<div>
@@ -208,8 +207,8 @@
 			</div>
 			<div>
 				<button>
-					<a href="#">Join Here</a>
-					<img src="img/icon/arrow.svg" alt="" width="18px" height="16px">
+					<span>Join Here</span>
+					<img src="img/icon/arrow.svg" alt="arrow" width="18" height="16">
 				</button>
 			</div>
 		</section>
@@ -248,12 +247,12 @@
 						</p>
 					</div>
 					<div>
-						<button>
-							<a href="#">Learn More</a>
-							<img src="img/icon/arrow.svg" alt="" width="16px" height="15px">
-						</button>
 						<div>
-							<img src="img/time.svg" alt="" width="17px" height="17">
+							<a href="#">Learn More</a>
+							<img src="img/icon/arrow.svg" alt="arrow" width="16" height="15">
+						</div>
+						<div>
+							<img src="img/time.svg" alt="time" width="17" height="17">
 							<span>10:00 AM - 2:00 PM</span>
 						</div>
 					</div>
@@ -281,12 +280,12 @@
 						</p>
 					</div>
 					<div>
-						<button>
-							<a href="#">Learn More</a>
-							<img src="img/icon/arrow.svg" alt="" width="16px" height="15px">
-						</button>
 						<div>
-							<img src="img/time.svg" alt="" width="17px" height="17px">
+							<a href="#">Learn More</a>
+							<img src="img/icon/arrow.svg" alt="arrow" width="16" height="15">
+						</div>
+						<div>
+							<img src="img/time.svg" alt="time" width="17" height="17">
 							<span>10:00 AM - 2:00 PM</span>
 						</div>
 					</div>
@@ -309,7 +308,7 @@
 			</div>
 			<div>
 				<article>
-					<img src="img/countries_1.png" alt="" width="348px" height="215px">
+					<img src="img/countries_1.png" alt="countries" width="348" height="215">
 					<h3>
 						Study in Australia
 					</h3>
@@ -320,7 +319,7 @@
 					</p>
 				</article>
 				<article>
-					<img src="img/countries_2.png" alt="" width="348px" height="215px">
+					<img src="img/countries_2.png" alt="countries" width="348" height="215">
 					<h3>
 						Study in Canada
 					</h3>
@@ -331,7 +330,7 @@
 					</p>
 				</article>
 				<article>
-					<img src="img/countries_3.png" alt="" width="348px" height="215px">
+					<img src="img/countries_3.png" alt="countries" width="348" height="215">
 					<h3>
 						Study in Canada
 					</h3>
@@ -359,10 +358,10 @@
 			<div>
 				<article>
 					<div>
-						<img src="img/green_detail.png" alt="" width="196px" height="1274px">
+						<img src="img/green_detail.png" alt="green" width="196" height="1274">
 					</div>
 					<div>
-						<img src="img/testimonial_1.png" alt="" width="62px" height="62px">
+						<img src="img/testimonial_1.png" alt="face" width="62" height="62">
 						<div>
 							<span>Harrison Phillips</span>
 							<span>Reporter</span>
@@ -379,7 +378,7 @@
 				</article>
 				<article>
 					<div>
-						<img src="img/testimonial_2.png" alt="" width="62px" height="62px">
+						<img src="img/testimonial_2.png" alt="face" width="62" height="62">
 					<div>
 						<span>Ainara Vergaras</span>
 						<span>Landscape Architect</span>
@@ -395,7 +394,7 @@
 				</article>
 				<article>
 					<div>
-						<img src="img/testimonial_3.png" width="62px" height="62px">
+						<img src="img/testimonial_3.png" alt="face" width="62" height="62">
 					<div>
 						<span>Niek Bove</span>
 						<span>Senior Developer</span>
@@ -423,7 +422,7 @@
 			</div>
 			<button>
 				<span>Apply Online</span>
-				<img src="img/icon/arrow.svg" alt="" width="18px" height="16px">
+				<img src="img/icon/arrow.svg" alt="arrow" width="18" height="16">
 			</button>
 		</section>
 	</main>
@@ -433,7 +432,7 @@
 	<footer>
 		<div>
 			<div>
-				<img src="img/logo_white.png" alt="" width="160px" height="57px">
+				<img src="img/logo_white.png" alt="logo" width="160" height="57">
 			</div>
 			<div>
 				<span>
@@ -464,9 +463,9 @@
 			</ul>
 		</div>
 		<div>
-			<img src="img/icon/facebook_white.svg" alt="" width="9px" height="16px">
-			<img src="img/icon/twitter_white.svg" alt="" width="16px" height="14px">
-			<img src="img/icon/instagram_white.svg" alt="" width="16px" height="16px">
+			<img src="img/icon/facebook_white.svg" alt="facebook" width="9" height="16">
+			<img src="img/icon/twitter_white.svg" alt="twitter" width="16" height="14">
+			<img src="img/icon/instagram_white.svg" alt="instagram" width="16" height="16">
 		</div>
 	</footer>
 </body>
