change-index.html

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 					<div>
 						<div>
 							<span>
-								23 <br>
+								23 <wbr>
 								Dec
 							</span>
 						</div>
@@ -253,7 +253,7 @@
 						</div>
 						<div>
 							<img src="img/time.svg" alt="time" width="17" height="17">
-							<span>10:00 AM - 2:00 PM</span>
+							<time>10:00 AM - 2:00 PM</time>
 						</div>
 					</div>
 				</article>
@@ -261,7 +261,7 @@
 					<div>
 						<div>
 							<span>
-								17 <br>
+								17 <wbr>
 								Dec
 							</span>
 						</div>
@@ -286,7 +286,7 @@
 						</div>
 						<div>
 							<img src="img/time.svg" alt="time" width="17" height="17">
-							<span>10:00 AM - 2:00 PM</span>
+							<time>10:00 AM - 2:00 PM</time>
 						</div>
 					</div>
 				</article>
@@ -434,14 +434,14 @@
 			<div>
 				<img src="img/logo_white.png" alt="logo" width="160" height="57">
 			</div>
-			<div>
+			<address>
 				<span>
 					Concord Royal Court (3rd floor)
 				</span>
 				<span>
 					Dhanmondi, Dhaka 1209, Bangladesh.
 				</span>
-			</div>
+			</address>
 			<div>
 				<span>© 2020 Executive Trade International.</span>
 			</div>
