pixel perfect меню и баннер плюс анимация при наведении

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=, initial-scale=1.0">
-	<title>Executive study abroad</title>
 	<link r​el​="​preload" ​href​="fonts/Abel-Regular.woff" ​a​s​="​font" ​>
 	<link r​el​="​preload" ​href​="fonts/Abel-Regular.woff2" ​a​s​="​font" ​>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
-	<link rel="stylesheet" href="css/flex.css">
+	<link rel="stylesheet" type="text/css" href="css/media.css">
+	<link rel="stylesheet" type="text/css" href="css/flex.css">
+	<title>Executive study abroad</title>
 </head>
 <body>
 
@@ -30,7 +31,7 @@
 							<a href="#" class="menu__item menu__item--underline">Our Services</a>
 							<a href="#" class="menu__item menu__item--underline">Responsibilities</a>
 							<a href="#" class="menu__item menu__item--underline">Country</a>
-							<a href="#" class="menu__item menu__item--underline header__button">Apply</a>
+							<a href="#" class="menu__item  header__button">Apply</a>
 						</div>
 					</nav>
 				</header>
