--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 							<a href="#" class="menu__item  header__button">Apply</a>
 						</div>
 					</nav>
+					<nav class="menu__adaptive">
+						<span class="menu__adaptive-icon"></span>
+					</nav>
 				</header>
 			</div>
 
@@ -60,9 +63,9 @@
 							</button>
 						</div>
 						<div class="social">
-							<img class="social__icon" src="img/icon/facebook.svg" alt="facebook" width="11" height="20">
-							<img class="social__icon" src="img/icon/twitter.svg" alt="twitter" width="21" height="18">
-							<img class="social__icon" src="img/icon/instagram.svg" alt="instagram" width="21" height="22">
+							<img class="social__icon social__icon--fb" src="img/icon/facebook.svg" alt="facebook" width="11" height="20">
+							<img class="social__icon social__icon--twitter" src="img/icon/twitter.svg" alt="twitter" width="21" height="18">
+							<img class="social__icon social__icon--inst" src="img/icon/instagram.svg" alt="instagram" width="21" height="22">
 						</div>
 					</div>
 					<div class="banner__img">
@@ -80,6 +83,10 @@
 						<img class="featured__img" src="img/featured_2.png" alt="featured" width="250" height="64">
 						<img class="featured__img" src="img/featured_3.png" alt="featured" width="224" height="79">
 						<img class="featured__img" src="img/featured_4.png" alt="featured" width="275" height="62">
+					</div>
+					<div class="featured__curcle">
+						<div class="featured__circule--purple"></div>
+						<div class="featured__circule--grey"></div>
 					</div>
 				</section>
 			</div>
@@ -446,20 +453,20 @@
 
 			<!-- Секция с кнопкой и призывом к действию -->
 
-			<div class="wrapper background-grey">
-				<section class="action container">
-					<div class="action__title">
-						<p class="title">
+		<div class="wrapper background-grey">
+			<section class="action container">
+				<div class="action__title">
+						<!-- <p class="title"> -->
 							Ready to chase your dreams?
-						</p>
-					</div>
-					<button class="button button__action">
-						<span class="button__text">Apply Online</span>
-						<img class="button__arrow" src="img/icon/arrow.svg" alt="arrow" width="18" height="16">
-					</button>
-				</section>
-			</div>
-		</main>
+						<!-- </p> -->
+				</div>
+				<button class="button button__action">
+					<span class="button__text">Apply Online</span>
+					<img class="button__arrow" src="img/icon/arrow.svg" alt="arrow" width="18" height="16">
+				</button>
+			</section>
+		</div>
+	</main>
 
 	<!-- Подвал -->
 
@@ -473,7 +480,6 @@
 					<span class="address__text footer__text">
 						Concord Royal Court (3rd floor)
 					</span>
-					<!-- <br> -->
 					<span class="address__text footer__text">
 						Dhanmondi, Dhaka 1209, Bangladesh.
 					</span>
