--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<link r​el​="​preload" ​href​="fonts/Abel-Regular.woff2" ​a​s​="​font" ​>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
-	<link rel="stylesheet" type="text/css" href="css/media.css">
 	<link rel="stylesheet" type="text/css" href="css/flex.css">
+	<link rel="stylesheet" type="text/css" href="css/media.css">
 	<title>Executive study abroad</title>
 </head>
 <body>
@@ -104,8 +104,10 @@
 					<div class="services__wrapper">
 						<article class="services__card">
 							<div class="card">
-								<img class="card__img" src="img/icon/services_1.svg" alt="icon" width="76" height="76">
-								<h3 class="card__title">Career Counselling</h3>
+								<div class="card__mobile">
+									<img class="card__img" src="img/icon/services_1.svg" alt="icon" width="76" height="76">
+									<h3 class="card__title">Career Counselling</h3>
+								</div>
 								<p class="card__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut.
 									Blanditiis quos in minus. Voluptatum quia quia voluptas voluptatem vero
 									ex possimus. Iure et consectetur dolorem dicta accusantium fugiat.
@@ -118,8 +120,10 @@
 						</article>
 						<article class="services__card">
 							<div class="card">
-								<img class="card__img" src="img/icon/services_2.svg" alt="icon" width="76" height="76">
-								<h3 class="card__title">University Admissions</h3>
+								<div class="card__mobile">
+									<img class="card__img" src="img/icon/services_2.svg" alt="icon" width="76" height="76">
+									<h3 class="card__title">University Admissions</h3>
+								</div>
 								<p class="card__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis
 									quos in minus. Voluptatum quia quia voluptas voluptatem vero ex possimus.
 									Iure et consectetur dolorem dicta accusantium fugiat.
@@ -132,8 +136,10 @@
 						</article>
 						<article class="services__card">
 							<div class="card">
-								<img class="card__img" src="img/icon/services_3.svg" alt="icon" width="76" height="76">
-								<h3 class="card__title">Visa Consultancy</h3>
+								<div class="card__mobile">
+									<img class="card__img" src="img/icon/services_3.svg" alt="icon" width="76" height="76">
+									<h3 class="card__title">Visa Consultancy</h3>
+								</div>
 								<p class="card__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut.
 									Blanditiis quos in minus. Voluptatum quia quia voluptas voluptatem vero
 									ex possimus. Iure et consectetur dolorem dicta accusantium fugiat.
@@ -146,8 +152,10 @@
 						</article>
 						<article class="services__card">
 							<div class="card">
-								<img class="card__img" src="img/icon/services_4.svg" alt="icon" width="76" height="76">
-								<h3 class="card__title">Accommodation</h3>
+								<div class="card__mobile">
+									<img class="card__img" src="img/icon/services_4.svg" alt="icon" width="76" height="76">
+									<h3 class="card__title">Accommodation</h3>
+								</div>
 								<p class="card__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut.
 									Blanditiis quos in minus. Voluptatum quia quia voluptas voluptatem vero ex possimus.
 									Iure et consectetur dolorem dicta accusantium fugiat.
@@ -160,8 +168,10 @@
 						</article>
 						<article class="services__card">
 							<div class="card">
-								<img class="card__img" src="img/icon/services_5.svg" alt="icon" width="76" height="76">
-								<h3 class="card__title">Pre-Departure Briefing</h3>
+								<div class="card__mobile">
+									<img class="card__img" src="img/icon/services_5.svg" alt="icon" width="76" height="76">
+									<h3 class="card__title">Pre-Departure Briefing</h3>
+								</div>
 								<p class="card__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut.
 									Blanditiis quos in minus. Voluptatum quia quia voluptas voluptatem vero
 									ex possimus. Iure et consectetur dolorem dicta accusantium fugiat.
