--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 			<div class="wrapper">
 				<header class="header container">
 					<a class="logo">
-						<img src="img/logo.png" alt="logo" width="146" height="52" class="logo__img">
+						<picture class="logo__img">
+							<source srcset="img/logo.png, img/logo-retina.png 2x" class="logo__img">
+							<img srcset="img/logo.png" alt="logo" width="146" height="52" class="logo__img">
+						</picture>
 					</a>
 					<nav class="menu">
 						<div class="menu__list">
@@ -42,9 +45,9 @@
 
 			<!-- Главный баннер сайта с кнопкой -->
 
-			<div class="wrapper">
+			<div class="wrapper wrapper__oval">
 				<section class="banner container">
-					<img class="banner__img--oval" src="img/oval.png" alt=" oval" width="1030" height="581">
+					<!-- <img class="banner__img--oval" src="img/oval.png" alt=" oval" width="1030" height="581"> -->
 					<div class="banner__wrapper">
 						<div class="banner__text">
 							<h1 class="banner__title">We Help to
@@ -68,8 +71,12 @@
 							<img class="social__icon social__icon--inst" src="img/icon/instagram.svg" alt="instagram" width="21" height="22">
 						</div>
 					</div>
-					<div class="banner__img">
-						<img class="banner__img--girl" src="img/banner.png" alt="banner" width="470" height="565">
+					<picture class="banner__img">
+						<source srcset="./img/banner.png, ./img/girl-retina.png 2x" class="banner__img--girl">
+						<img class="banner__img--girl" src="./img/banner.png" alt="banner" width="470" height="565">
+					</picture>
+					<div class="banner__oval">
+
 					</div>
 				</section>
 			</div>
@@ -84,10 +91,10 @@
 						<img class="featured__img" src="img/featured_3.png" alt="featured" width="224" height="79">
 						<img class="featured__img" src="img/featured_4.png" alt="featured" width="275" height="62">
 					</div>
-					<div class="featured__curcle">
+					<!-- <div class="featured__curcle">
 						<div class="featured__circule--purple"></div>
 						<div class="featured__circule--grey"></div>
-					</div>
+					</div> -->
 				</section>
 			</div>
 			<!-- Наши услуги -->
@@ -198,9 +205,10 @@
 					</div>
 					<div class="news__wrapper">
 						<article class="news__card">
-							<div class="news__img">
-								<img src="img/card_news_1.png" alt="card" width="344" height="224">
-							</div>
+							<picture class="news__img">
+								<source srcset="./img/card_news_1.png, ./img/retina/news-retina1.png 2x" class="news__img">
+								<img srcset="./img/card_news_1.png" alt="card" width="344" height="224" class="news__img">
+							</picture>
 							<div class="date__wrapper">
 								<div class="date">
 									<img class="date__icon" src="img/icon/calendar.svg" alt="calendar" width="14" height="14">
@@ -212,9 +220,10 @@
 							</div>
 						</article>
 						<article class="news__card">
-							<div class="news__img">
-								<img src="img/card_news_2.png" alt="card" width="344" height="224">
-							</div>
+							<picture class="news__img">
+								<source srcset="./img/card_news_2.png, ./img/retina/news-retina2.png 2x" class="news__img">
+								<img srcset="./img/card_news_2.png" alt="card" width="344" height="224" class="news__img">
+							</picture>
 							<div class="date__wrapper">
 								<div class="date">
 									<img class="date__icon" src="img/icon/calendar.svg" alt="calendar" width="14" height="14">
@@ -226,9 +235,10 @@
 							</div>
 						</article>
 						<article class="news__card">
-							<div class="news__img">
-								<img class="news__icon" src="img/card_news_3.png" alt="card" width="344" height="224">
-							</div>
+							<picture class="news__img">
+								<source srcset="./img/card_news_3.png, ./img/retina/news-retina3.png 2x" class="news__img">
+								<img class="news__img" src="img/card_news_3.png" alt="card" width="344" height="224">
+							</picture>
 							<div class="date__wrapper">
 								<div class="date">
 									<img class="date__icon" src="img/icon/calendar.svg" alt="calendar" width="14" height="14">
@@ -345,9 +355,10 @@
 					</div>
 					<div class="countries__wrapper">
 						<article class="countries__card">
-							<div class="countries__img">
-								<img src="img/countries_1.png" alt="countries" width="348" height="215">
-							</div>
+							<pictures class="countries__img">
+								<source srcset="./img/countries.png, ./img/retina/countries-retina1.png 2x" class="countries__img">
+								<img src="img/countries_1.png" alt="countries" width="348" height="215" class="countries__img">
+							</pictures>
 							<h3 class="countries__text">
 								Study in Australia
 							</h3>
@@ -358,9 +369,10 @@
 							</p>
 						</article>
 						<article class="countries__card">
-							<div class="countries__img">
-								<img src="img/countries_2.png" alt="countries" width="348" height="215">
-							</div>
+							<pictures class="countries__img">
+								<source srcset="./img/countries_2.png, ./img/retina/countries-retina2.png 2x" class="countries__img">
+								<img srcset="./img/countries_2.png" alt="countries" width="348" height="215" class="countries__img">
+							</pictures>
 							<h3 class="countries__text">
 								Study in Canada
 							</h3>
@@ -371,9 +383,10 @@
 							</p>
 						</article>
 						<article class="countries__card">
-							<div class="countries__img">
-								<img src="img/countries_3.png" alt="countries" width="348" height="215">
-							</div>
+							<pictures class="countries__img">
+								<source srcset="./img/countries_3.png, ./img/retina/countries-retina3.png 2x" class="countries__img">
+								<img srcset="img/countries_3.png" alt="countries" width="348" height="215" class="countries__img">
+							</pictires>
 							<h3 class="countries__text">
 								Study in Canada
 							</h3>
@@ -481,6 +494,9 @@
 	<!-- Подвал -->
 
 	<footer class="footer">
+		<div class="logo logo__footer-mobile">
+			<img src="img/logo_white.png" alt="logo" width="160" height="57">
+		</div>
 		<div class="footer__wrapper">
 			<div class="footer__info">
 				<div class="logo logo__footer">
@@ -492,6 +508,9 @@
 					</span>
 					<span class="address__text footer__text">
 						Dhanmondi, Dhaka 1209, Bangladesh.
+					</span>
+					<span class="footer__text corporation">
+						© 2020 Executive Trade International.
 					</span>
 				</address>
 			</div>
@@ -514,9 +533,6 @@
 				<img class="footer__icon" src="img/icon/twitter_white.svg" alt="twitter" width="16" height="14">
 				<img class="footer__icon" src="img/icon/instagram_white.svg" alt="instagram" width="16" height="16">
 			</div>
-		</div>
-		<div class="corporation">
-			<span class="footer__text">© 2020 Executive Trade International.</span>
 		</div>
 	</footer>
 </body>
