--- a/index.html
+++ b/index.html
@@ -10,15 +10,6 @@
 	<link rel="stylesheet" type="text/css" href="css/flex.css">
 	<link rel="stylesheet" type="text/css" href="css/media.css">
 	<link rel="stylesheet" href="swiper/swiper-bundle.min.css">
-
-	<!-- <svg width="0" height="0" class="hidden">
-		<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 76 76" id="services_1">
-			<rect width="76" height="76" rx="38" fill="#717CFF"></rect>
-			<path
-				d="M48.204 27.756a1.512 1.512 0 00-.108 2.03c2.231 2.801 3.4 6.632 2.354 10.648-1.215 4.693-4.893 8.2-9.555 9.14-7.846 1.553-14.724-4.509-14.724-12.094 0-6.278 4.693-11.447 10.77-12.201v3.108a9.228 9.228 0 00-7.585 10.508c.6 4.016 3.939 7.247 7.97 7.74 5.6.692 10.386-3.678 10.386-9.155a9.167 9.167 0 00-1.585-5.17c-.523-.77-1.647-.815-2.308-.17l-.016.016c-.523.523-.569 1.339-.169 1.954a6.15 6.15 0 01.754 5.108 6.138 6.138 0 01-4.523 4.262 6.154 6.154 0 01-7.54-6c0-2.862 1.97-5.247 4.616-5.94v3.293c-.923.539-1.538 1.508-1.538 2.647a3.086 3.086 0 003.077 3.077 3.086 3.086 0 003.077-3.077 3.028 3.028 0 00-1.538-2.647V23.186c0-.6-.493-1.092-1.093-1.092-8.247-.308-15.355 6.246-15.801 14.463-.554 10.078 8.323 18.186 18.478 16.001a15.487 15.487 0 0011.925-11.801c1.092-4.862-.308-9.478-3.032-12.878-.569-.723-1.646-.77-2.292-.123z"
-				fill="#37474F"></path>
-		</symbol>
-	</svg> -->
 	<title>Executive study abroad</title>
 </head>
 <body>
@@ -82,13 +73,13 @@
 							<!-- <img class="social__icon social__icon--fb" src="img/icon/facebook.svg" alt="facebook" width="11" height="20">
 							<img class="social__icon social__icon--twitter" src="img/icon/twitter.svg" alt="twitter" width="21" height="18">
 							<img class="social__icon social__icon--inst" src="img/icon/instagram.svg" alt="instagram" width="21" height="22"> -->
-							<svg class="social__icon social__icon--fb" width="11" height="20">
+							<svg class="social__icon social__icon--fb social__icon--banner" width="11" height="20">
 								<use xlink:href="sprite.svg#facebook"></use>
 							</svg>
-							<svg class="social__icon social__icon--twitter" width="21" height="18">
-								<use xlink:href="sprite.svg#twitter"></use>
+							<svg class="social__icon social__icon--fb social__icon--banner" width="21" height="18">
+								<use xlink:href="sprite.svg#twitter_24px"></use>
 							</svg>
-							<svg class="social__icon social__icon--inst" width="21" height="22">
+							<svg class="social__icon social__icon--inst social__icon--banner" width="21" height="22">
 								<use xlink:href="sprite.svg#instagram"></use>
 							</svg>
 						</div>
@@ -149,9 +140,11 @@
 						<article class="services__card">
 							<div class="card">
 								<div class="card__mobile">
-									<svg class="icon services1" width="30" height="30">
-										<use xlink:href="sprite.svg#services1"></use>
-									</svg>
+									<div class="card__svg-container services1">
+										<svg class="icon" width="30" height="30">
+											<use xlink:href="sprite.svg#services1"></use>
+										</svg>
+									</div>
 									<h3 class="card__title">Career Counselling</h3>
 								</div>
 								<p class="card__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut.
@@ -171,9 +164,11 @@
 							<div class="card">
 								<div class="card__mobile">
 									<!-- <img class="card__img" src="img/icon/services_2.svg" alt="icon" width="76" height="76"> -->
-									<svg class="icon services2">
-										<use xlink:href="sprite.svg#services2"></use>
-									</svg>
+									<div class="card__svg-container services2">
+										<svg class="icon" width="26" height="26">
+											<use xlink:href="sprite.svg#services2"></use>
+										</svg>
+									</div>
 									<h3 class="card__title">University Admissions</h3>
 								</div>
 								<p class="card__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis
@@ -193,9 +188,11 @@
 							<div class="card">
 								<div class="card__mobile">
 									<!-- <img class="card__img" src="img/icon/services_3.svg" alt="icon" width="76" height="76"> -->
-									<svg class="icon services3">
-										<use xlink:href="sprite.svg#services3"></use>
-									</svg>
+									<div class="card__svg-container services3">
+										<svg class="icon" widht="22" height="29">
+											<use xlink:href="sprite.svg#services3"></use>
+										</svg>
+									</div>
 									<h3 class="card__title">Visa Consultancy</h3>
 								</div>
 								<p class="card__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut.
@@ -215,9 +212,11 @@
 							<div class="card">
 								<div class="card__mobile">
 									<!-- <img class="card__img" src="img/icon/services_4.svg" alt="icon" width="76" height="76"> -->
-									<svg class="icon services4">
-										<use xlink:href="sprite.svg#services4"></use>
-									</svg>
+									<div class="card__svg-container services4">
+										<svg class="icon" width="23" height="28">
+											<use xlink:href="sprite.svg#services4"></use>
+										</svg>
+									</div>
 									<h3 class="card__title">Accommodation</h3>
 								</div>
 								<p class="card__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut.
@@ -237,9 +236,11 @@
 							<div class="card">
 								<div class="card__mobile">
 									<!-- <img class="card__img" src="img/icon/services_5.svg" alt="icon" width="76" height="76"> -->
-									<svg class="icon services5">
-										<use xlink:href="sprite.svg#services5"></use>
-									</svg>
+									<div class="card__svg-container services5">
+										<svg class="icon" width="26" height="18">
+											<use xlink:href="sprite.svg#services5"></use>
+										</svg>
+									</div>
 									<h3 class="card__title">Pre-Departure Briefing</h3>
 								</div>
 								<p class="card__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut.
@@ -622,11 +623,11 @@
 				<!-- <img class="footer__icon" src="img/icon/facebook_white.svg" alt="facebook" width="9" height="16">
 				<img class="footer__icon" src="img/icon/twitter_white.svg" alt="twitter" width="16" height="14">
 				<img class="footer__icon" src="img/icon/instagram_white.svg" alt="instagram" width="16" height="16"> -->
-				<svg class="footer__icon" width="9" height="16">
+				<svg class="footer__icon footer__icon--fb" width="9" height="16">
 					<use xlink:href="sprite.svg#facebook"></use>
 				</svg>
 				<svg class="footer__icon" width="16" height="14">
-					<use xlink:href="sprite.svg#twitter"></use>
+					<use xlink:href="sprite.svg#twitter_24px"></use>
 				</svg>
 				<svg class="footer__icon" width="16" height="16">
 					<use xlink:href="sprite.svg#instagram"></use>
